v0.11.0 feat[authorization]: login+register It is necessary to run a redis server for this to work: Execute this with docker desktop opened: docker run -d --name redis -p 6379:6379 redis